+ more blueprint fixes